# programs-dotgit-sync

./: .commitlintrc.ts  .config.yaml  .coverage-threshold.toml  .coveragerc  .dotgit.yaml  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.BEERWARE  Makefile  README.md  cspell.json  devbox.json  flake.nix  hatch.toml  main.py  pyinstaller.spec  pyproject.toml  pytest.ini  releaserc.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  ruff.toml
.cspell/: python.txt  words.txt
.gitlab/: release.yaml
.gitlab/commitlint/: gitlab-ci.yaml
.gitlab/dotgit-sync/: gitlab-ci.yaml
.gitlab/markdownlint/: gitlab-ci.yaml
.gitlab/python/: gitlab-ci.yaml
.gitlab/semantic-release/: gitlab-ci.yaml
.release/: commit_parser.py
.release/templates/: AUTHORS.j2
.semantic-release/templates/: default-template.hbs
devbox/init_hook/: pre-commit.sh  python.sh
dotgit_sync/: __init__.py  argparser.py  const.py  filetype.py  gitignore.py  licenses.py  logger.py  main.py  render.py  repo.py  utils.py
dotgit_sync/migrations/: __init__.py  v0.py  v0_v1alpha1.py
dotgit_sync/schemas/: config.schema.yaml  partial.basics.yaml  partial.dotgit.yaml  partial.gitignore.yaml  partial.licenses.yaml  partial.maintainer.yaml  partial.source.yaml
dotgit_sync/templates/licenses/: BEERWARE  COPYRIGHT  MIT  copyright.j2
dotgit_sync/utils/: __init__.py  config.py  const.py  json.py  jsonc.py  migrate_config.py  templates.py
modules/: home-manager.nix
src/: argparser.py  const.py  filetype.py  gitignore.py  licenses.py  logger.py  main.py  render.py  repo.py  utils.py
src/schemas/: config.schema.yaml  partial.dotgit.yaml  partial.licenses.yaml
src/templates/statics/: .releaserc.js  CODE_OF_CONDUCT.md
src/templates/templates/base/: .pre-commit-config.yaml  cspell.json  devbox.json
src/templates/templates/base/.cspell/: words.txt
src/templates/templates/python/: .editorconfig  cspell.json  devbox.json  pyproject.toml
src/templates/templates/python/.cspell/: python.txt
tests/: __init__.py  argparser_test.py  filetype_test.py  gitignore_test.py  license_test.py  logger_test.py  main_test.py  render_test.py
tests/fake_config/: empty.dotgit.yaml  main.dotgit.yaml  main.merge_yaml.dotgit.yaml  valid.minimal.dotgit.yaml  valid.with_source_path.dotgit.yaml  wrong.dotgit.yaml  wrong.with_both_source.dotgit.yaml  wrong.without_source.dotgit.yaml  wrong.yaml_merge.dotgit.yaml
tests/fake_gitignore/: query.vs.clean.gitignore  query.vs.render.gitignore
tests/fake_licenses/: render.COPYRIGHT  render.LICENSE.BEERWARE  render.LICENSE.MIT
tests/fake_rendered/: fake_json_with_custom_key.json  fake_statics.md  fake_templates.md  fake_templates_no_outside_context.md  fake_templates_with_context.md  fake_yaml_with_custom_key.yaml
tests/fake_rendered/main/: another_fake.md  fake.json  fake.yaml
tests/fake_rendered/main_merge_yaml/: .gitignore  LICENSE  LICENSE.BEERWARE  fake.md  fake.yaml  fake_merge.yaml
tests/fake_templates/statics/all_types/: .editorconfig  fake.in  fake.js  fake.json  fake.jsonc  fake.py  fake.yaml  fake.zsh
tests/fake_templates/statics/another_main/: fake.yaml  fake_merge.yaml
tests/fake_templates/statics/other_types/: fake.json  fake.md  fake_list.json
tests/fake_templates/templates/all_types/: .envrc  .gitignore  fake.bash  fake.hbs  fake.j2  fake.md  fake.py  fake.sh  fake.toml  fake.ts  fake.txt
tests/fake_templates/templates/another_main/: fake.json
tests/fake_templates/templates/main/: another_fake.md  fake.md
tests/fake_templates/templates/other_types/: fake.md  fake.yaml
tests/fake_templates/templates/other_types/main/: fake_merge.yaml
tests/migrations_test/: v0_test.py  v0_v1alpha1_test.py
tests/migrations_test/v0_test/: from.yaml  to.yaml
tests/migrations_test/v0_v1alpha1_test/: from.yaml  to.yaml
tests/utils_test/: __init__.py  config_test.py  json_test.py  jsonc_test.py  migrate_config_test.py  template_test.py
tests/utils_test/migrate_config_test/: initial.yaml  v0.yaml  v1alpha1.yaml
